@@ -6,7 +6,6 @@ TODO
 15. Do testu pridat komentare.
 17. Prepsat dokumentaci na uziti =head2
 18. Priklad do Raw dokumentace.
-19. Priklad do hlavni dokumentace.
 20.
 
 Applied
@@ -55,3 +54,6 @@ OK [20200809] skim
 
 14. Do testu pouzit isa_ok().
 OK [20200809] skim
+
+19. Priklad do hlavni dokumentace.
+OK [20210128] skim
